# BirdGame

./: CMakeLists.txt  Controller.cpp  Controller.h  State.cpp  State.h  main.cpp
BirdLogic/: Bird.cpp  Bird.h  Board.cpp  Board.h  DefineVariables.h  Spikes.cpp  Spikes.h
BirdView/: BoardCreator.cpp  BoardCreator.h  FinalScreen.cpp  FinalScreen.h  MainMenu.cpp  MainMenu.h
